--- a/src/Sections/Navbar/Navbar.module.css
+++ b/src/Sections/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 2;
   position: fixed;
-  padding: 1rem;
+  padding-block: 1rem;
   align-items: center;
 }
 
@@ -38,7 +38,7 @@
   display: flex;
   gap: 0.5rem;
 
-  @media (max-width: 510px) {
+  @media (max-width: 400px) {
     display: none;
   }
 }
