--- a/src/components/BrandIcons/_BrandIcon.module.css
+++ b/src/components/BrandIcons/_BrandIcon.module.css
@@ -1,7 +1,7 @@
 .root {
   --brand-icon-color: var(--mantine-color-text);
 
-  &[data-path-color-variant="fill"] {
+  &[data-path-color-variant='fill'] {
     path {
       fill: var(--brand-icon-color);
     }
